@@ -19,6 +19,9 @@ TODO
 Recovery:
 * scan for records in chunk free space
 
+20120415
+* worke on libfvalue to copy to string functions
+
 20120414
 * worked on API
 * worked on parsing binary XML
